# giga_zoid_hunt

./: .gitattributes  Project folder naming convention.txt  README.md
0_mix_proto_test_run/bevy_game/: Cargo.toml
0_mix_proto_test_run/bevy_game/src/: main.rs  player.rs
1_bev_proto_basics/: Cargo.toml
5_bev_real_mvp1/: Cargo.toml
5_bev_real_mvp1/src/: gameplay_controller.rs  main.rs
basics_prototype_bevy_proj/: Cargo.toml
basics_prototype_bevy_proj/src/: main.rs  player_controller.rs
n10_mix_proto_proc_macros/: Cargo.toml
n10_mix_proto_proc_macros/bins/main/: Cargo.toml
n10_mix_proto_proc_macros/bins/main/src/: main.rs
n10_mix_proto_proc_macros/libs/proc_macros/: Cargo.toml
n10_mix_proto_proc_macros/libs/proc_macros/src/: lib.rs  non_macro.rs
n13_bev_proto_fundsp/: Cargo.toml
n13_bev_proto_fundsp/src/: main.rs
n14_mix_proto_fundsp_workspace/: Cargo.toml
n14_mix_proto_fundsp_workspace/bins/main/: Cargo.toml
n14_mix_proto_fundsp_workspace/bins/main/src/: main.rs
n14_mix_proto_fundsp_workspace/libs/bevy_fundsp/: Cargo.toml
n14_mix_proto_fundsp_workspace/libs/bevy_fundsp_13/: Cargo.toml
n14_mix_proto_fundsp_workspace/libs/bevy_fundsp_13/src/: backend.rs  dsp_source.rs  lib.rs
n1_bev_proto_basics/: Cargo.toml
n3_bev_proto_movement+selection/: Cargo.toml
n3_bev_proto_movement+selection/proto_src/: control_groups_multi_manager.rs
n3_bev_proto_movement+selection/src/unit/: movement.rs
n5_bev_real_mvp1/: Cargo.toml
n5_bev_real_mvp1/src/: enemy_units.rs  gameplay_controller.rs  main.rs  rapier_config.rs  rapier_groups.rs  rts_controller.rs  rts_unit.rs  unit.rs  unit_commander.rs
n5_bev_real_mvp1/src/enemy_units/: proto_unit.rs
n5_bev_real_mvp1/src/enemy_units/proto_unit/: ai.rs
n5_bev_real_mvp1/src/gameplay_controller/: add_mode.rs  rapier_mouse.rs  selection.rs  selection_commands.rs  unit_commands.rs  unit_mouse.rs  unit_selection.rs
n5_bev_real_mvp1/src/gameplay_controller/selection/: mouse.rs
n5_bev_real_mvp1/src/gameplay_controller/unit_commands/: input.rs
n5_bev_real_mvp1/src/gameplay_controller/unit_selection/: input.rs
n5_bev_real_mvp1/src/player_units/: proto_unit.rs
n5_bev_real_mvp1/src/player_units/proto_unit/: ai.rs
n5_bev_real_mvp1/src/rapier_config/: collision_groups.rs  filters.rs  groups.rs  prelude.rs
n5_bev_real_mvp1/src/rts_controller/: add_mode.rs  mouse.rs  rapier_queries.rs  unit_commands.rs  unit_selection.rs
n5_bev_real_mvp1/src/rts_controller/unit_commands/: attack.rs  pure_move.rs  stop.rs
n5_bev_real_mvp1/src/rts_controller/unit_selection/: selection_box.rs
n5_bev_real_mvp1/src/rts_unit/: behaviour.rs  block.rs  blocks.rs  control.rs  detection.rs  movement.rs  parts.rs  soul.rs  soul_detection.rs  team.rs  unit_components.rs  unit_type.rs  unit_types.rs
n5_bev_real_mvp1/src/rts_unit/behaviour/: bang.rs  blocks.rs  controlled.rs  detection.rs  follow_orders.rs  navigation.rs  order_processing.rs  parts.rs  state.rs
n5_bev_real_mvp1/src/rts_unit/control/: blocks.rs  commandable.rs  commander.rs  parts.rs  prelude.rs  selectable.rs  selector.rs
n5_bev_real_mvp1/src/rts_unit/detection/: detectors.rs  parts.rs  single_result_types.rs
n5_bev_real_mvp1/src/rts_unit/movement/: basic_kinematic_position.rs  kinematic_position_movement.rs
n5_bev_real_mvp1/src/rts_unit/soul_detection/: blocks.rs  detectors.rs  parts.rs  result_types.rs
n5_bev_real_mvp1/src/rts_unit/team/: enemy.rs  player.rs
n5_bev_real_mvp1/src/rts_unit/unit_type/: enemy.rs  prelude.rs
n5_bev_real_mvp1/src/rts_unit/unit_types/: enemy.rs  player.rs
n5_bev_real_mvp1/src/unit/: commandable.rs  commander.rs  commands.rs  movement.rs  orders.rs  selectable.rs
n8_mix_real_workspace/: Cargo.toml
n8_mix_real_workspace/bins/main/: Cargo.toml
n8_mix_real_workspace/crates/project_settings/: Cargo.toml
n8_mix_real_workspace/crates/ref_paths/: Cargo.toml
n8_mix_real_workspace/libs/attack_laser/: Cargo.toml
n8_mix_real_workspace/libs/bang_colour/: Cargo.toml
n8_mix_real_workspace/libs/behaviour_tree/: Cargo.toml
n8_mix_real_workspace/libs/cheats/: Cargo.toml
n8_mix_real_workspace/libs/control_to_detector/: Cargo.toml
n8_mix_real_workspace/libs/control_to_nav/: Cargo.toml
n8_mix_real_workspace/libs/death_flare/: Cargo.toml
n8_mix_real_workspace/libs/detection_colour/: Cargo.toml
n8_mix_real_workspace/libs/enemy/: Cargo.toml
n8_mix_real_workspace/libs/health_to_death/: Cargo.toml
n8_mix_real_workspace/libs/laser_sound/: Cargo.toml
n8_mix_real_workspace/libs/level/: Cargo.toml
n8_mix_real_workspace/libs/mouse_pos/: Cargo.toml
n8_mix_real_workspace/libs/nav_to_mover/: Cargo.toml
n8_mix_real_workspace/libs/player_unit/: Cargo.toml
n8_mix_real_workspace/libs/project_settings/: Cargo.toml
n8_mix_real_workspace/libs/random/: Cargo.toml
n8_mix_real_workspace/libs/rapier_config/: Cargo.toml
n8_mix_real_workspace/libs/ref_caravan/: Cargo.toml
n8_mix_real_workspace/libs/ref_marks/: Cargo.toml
n8_mix_real_workspace/libs/ref_paths/: Cargo.toml
n8_mix_real_workspace/libs/rts_controller/: Cargo.toml
n8_mix_real_workspace/libs/rts_direct_attack/: Cargo.toml
n8_mix_real_workspace/libs/rts_unit_control/: Cargo.toml
n8_mix_real_workspace/libs/rts_unit_death/: Cargo.toml
n8_mix_real_workspace/libs/rts_unit_detectors/: Cargo.toml
n8_mix_real_workspace/libs/rts_unit_health/: Cargo.toml
n8_mix_real_workspace/libs/rts_unit_mover_from_nav/: Cargo.toml
n8_mix_real_workspace/libs/rts_unit_movers/: Cargo.toml
n8_mix_real_workspace/libs/rts_unit_nav/: Cargo.toml
n8_mix_real_workspace/libs/rts_unit_nav_from_control/: Cargo.toml
n8_mix_real_workspace/libs/rts_unit_soul/: Cargo.toml
n8_mix_real_workspace/libs/rts_unit_team/: Cargo.toml
n8_mix_real_workspace/libs/rts_waymarks/: Cargo.toml
n8_mix_real_workspace/libs/selection_visuals/: Cargo.toml
n8_mix_real_workspace/libs/sprite_sorting/: Cargo.toml
n8_mix_real_workspace/src/: main.rs
n9_mix_proto_workspace_test/: Cargo.toml
n9_mix_proto_workspace_test/bins/foo/: Cargo.toml
n9_mix_proto_workspace_test/libs/bargo/: Cargo.toml
(+304 files in other folders)
