[package]
name = "5_bev_real_mvp1"
version = "0.1.0"
edition = "2021"
authors = ["Dominic_Rooney"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.11.2"
bevy_rapier2d =  {version ="0.22.0", features = ["debug-render-2d"]}
mouse_tracking = { package = "bevy_mouse_tracking_plugin", version = "0.6" }

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3