# ================================
# RELEVANT COMMANDS
# rustup default nightly
# rustup update
# cargo install -f cargo-binutils
# rustup component add llvm-tools-preview

[package]
name = "n13_bev_proto_fundsp"
version = "0.1.0"
edition = "2021"
authors = ["Dominic_Rooney"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.13.0"
bevy_fundsp = "0.4.0"

[features]
dev = ["bevy/dynamic_linking",]

# ================================
# PROFILES
[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.release]
opt-level = "s"
lto = true
codegen-units = 1
strip = true

[profile.dist] # distribution
inherits = "release"
opt-level = 3
lto = true
codegen-units = 1
strip = true