[package]
name = "n1_bev_proto_basics"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# Remove dynamic_linking for releases
[dependencies]
bevy = { version = "0.11.0", features = ["dynamic_linking"] }
bevy_mouse_tracking_plugin = "0.6.0"

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3
