# ================================
# CARGO SETUP REFERENCES
# https://github.com/NiklasEi/bevy_game_template
# https://github.com/DigitalExtinction/Game
# https://bevyengine.org/learn/quick-start/getting-started/setup/
# https://stackoverflow.com/questions/64623568/why-sometimes-extern-crate-is-needed 

# ================================
# RELEVANT COMMANDS
# rustup default nightly
# rustup update
# cargo clean
# cargo install -f cargo-binutils
# rustup component add llvm-tools-preview

# ================================
# WORKSPACE
[workspace]
resolver = "2"
members = ["libs/*", "bins/*"]

[workspace.package]
version = "0.0.1"
authors = ["Dominic Rooney"]
edition = "2021"

[workspace.dependencies]
# external
bevy = { version = "0.13.0" }  
bevy_rapier2d = { version = "0.25.0", features = ["serde-serialize"] }
# bevy_rapier2d: --features -f debug-render-2d simd-nightly
bitflags = { version = "2.4.2" }

# bins
main = { path = "bins/main"}

# libs
ref_marks = { path = "libs/ref_marks" }
ref_paths = { path = "libs/ref_paths" }
ref_caravan = { path = "libs/ref_caravan" }
behaviour_tree = { path = "libs/behaviour_tree" }

mouse_pos = { path = "libs/mouse_pos" }
project_settings = { path = "libs/project_settings "}
rapier_config = { path = "libs/rapier_config"}

rts_unit_death = { path = "libs/rts_unit_death" }
rts_unit_soul = { path = "libs/rts_unit_soul" }
rts_unit_team = { path = "libs/rts_unit_team" }
rts_unit_health = { path = "libs/rts_unit_health" }
rts_unit_control = { path = "libs/rts_unit_control" }
rts_controller = { path = "libs/rts_controller" }
rts_unit_nav = { path = "libs/rts_unit_nav" }
rts_unit_movers = { path = "libs/rts_unit_movers" }
rts_unit_detectors = { path = "libs/rts_unit_detectors" }
rts_direct_attack = { path = "libs/rts_direct_attack" }
death_flare = { path = "libs/death_flare" }
bang_colour = { path = "libs/bang_colour" }
attack_laser = { path = "libs/attack_laser" }
detection_colour = { path = "libs/detection_colour" }

control_to_detector = { path = "libs/control_to_detector" }
control_to_nav = { path = "libs/control_to_nav" }
nav_to_mover = { path = "libs/nav_to_mover" }
health_to_death = { path = "libs/health_to_death" }

player_unit = { path = "libs/player_unit" }

# ================================
# PROFILES
[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.release]
opt-level = "s"
lto = true
codegen-units = 1
strip = true

[profile.dist] # distribution
inherits = "release"
opt-level = 3
lto = true
codegen-units = 1
strip = true