[workspace]
resolver = "2"
members = ["bins/*", "libs/*"]

[workspace.dependencies]
bargo = { path = "libs/bargo" }
bevy = { version = "0.13.0" }

[workspace.package]
authors = ["Dominic Rooney"]

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.release]
opt-level = "s"
lto = true
codegen-units = 1
strip = true

[profile.dist] # distribution
inherits = "release"
opt-level = 3
lto = true
codegen-units = 1
strip = true