[package]
name = "bevy_game"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# Remove dynamic linking before release
[dependencies]
bevy = { version = "0.11.2", features = ["dynamic_linking"] }
bevy_xpbd_2d = { git = "https://github.com/Jondolf/bevy_xpbd", branch = "main" }

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3