[package]
name = "main"

version.workspace = true
authors.workspace = true
edition.workspace = true

[dependencies]
bevy.workspace = true
bevy_rapier2d.workspace = true
bevy_rand.workspace = true
rand_core.workspace = true

behaviour_tree.workspace = true
health_to_death.workspace = true
mouse_pos.workspace = true
player_unit.workspace = true
rts_controller.workspace = true
rts_direct_attack.workspace = true
rts_unit_control.workspace = true
rts_unit_death.workspace = true
rts_unit_detectors.workspace = true
rts_unit_movers.workspace = true
rts_unit_nav.workspace = true
death_flare.workspace = true
bang_colour.workspace = true
attack_laser.workspace = true
detection_colour.workspace = true
enemy.workspace = true
rts_unit_health.workspace = true
level.workspace = true
selection_visuals.workspace = true
sprite_sorting.workspace = true

[features]
dev = ["bevy/dynamic_linking",]