[package]
name = "player_unit"

version.workspace = true
authors.workspace = true
edition.workspace = true

[dependencies]
bevy.workspace = true

behaviour_tree.workspace = true

ref_paths.workspace = true
ref_caravan.workspace = true
ref_marks.workspace = true

rts_unit_detectors.workspace = true
rts_unit_control.workspace = true
rts_unit_nav.workspace = true

nav_to_mover.workspace = true