[package]
name = "rts_unit_detectors"

version.workspace = true
authors.workspace = true
edition.workspace = true

[dependencies]
bevy.workspace = true
bevy_rapier2d.workspace = true

rapier_config.workspace = true

ref_paths.workspace = true
ref_caravan.workspace = true
ref_marks.workspace = true

rts_unit_control.workspace = true