[package]
name = "rts_unit_nav_from_control"

version.workspace = true
authors.workspace = true
edition.workspace = true

[dependencies]
bevy.workspace = true

ref_caravan.workspace = true
ref_paths.workspace = true

rts_waymarks.workspace = true
rts_unit_nav.workspace = true
rts_unit_control.workspace = true