[package]
name = "rts_unit_soul"

version.workspace = true
authors.workspace = true
edition.workspace = true

[dependencies]
bevy.workspace = true
bevy_rapier2d.workspace = true

rapier_config.workspace = true

rts_unit_death.workspace = true
rts_unit_team.workspace = true
rts_unit_health.workspace = true

health_to_death.workspace = true